--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Home</title>
     <!-- font awesome icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- slider css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- css -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -50,7 +53,80 @@
             </div>
            </div>
         </div>
+
+        <!-- hero section -->
+        <div class="hero-section">
+            <div class="hero-content">
+                <h2>Wij houden van <span style="color:#52B099">fietsen</span></h2>
+                <p>Ultiem fietsplezier door middel van optimale service, kwaliteit en vakmanschap. Dat staat bij ons voorop!</p>
+
+                <div class="search-box">
+                    <span><i class="fa-regular fa-comments"></i> Plan een advies gesprek</span>
+                    <span><i class="fa-solid fa-screwdriver-wrench"></i> Plan een service gesprek</span>
+
+                    <div class="search-form">
+                        <form action="">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input type="text" placeholder="Waar ben je naar op zoek?">
+                            <button type="submit"  class="search-submit">ZOEKEN <i class="fa-solid fa-arrow-right"></i></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
         
+        <!-- advice area -->
+        <div class="advice-section">
+
+        </div>
+
+        <!-- tweehands section -->
+        <div class="tweehand-section">
+            <div class="tweehand-left">
+                <h2>Tweedehands fietsen</h2>
+                <p>Bij ons vind je tweedehands fietsen met omruilgarantie én afgesteld door de vakman. Je kunt deze fietsen veilig online bestellen en betalen. Vervolgens kun je de bestelling zonder bijkomende kosten afhalen bij de Bike Totaal winkel of thuis laten bezorgen voor € 29,95 in NL/ € 49,95 in BE.</p>
+                <a href="">BEKIJK HET ASSORTIMENT <i class="fa-solid fa-arrow-right"></i> </a>
+            </div>
+            <div class="tweehand-right">
+                <img src="img/Mask group (1).png" alt="">
+            </div>
+        </div>
+
+           <!-- slidersection -->
+           <div class="slider-section">
+            <h2>Onze bestsellers</h2>
+            <div class="my-slide">
+                <div class="my-item"><img src="img/Flow dames Edit 1.png" alt=""></div>
+                <div class="my-item"><img src="img/Flow dames Edit 1.png" alt=""></div>
+                <div class="my-item"><img src="img/Flow dames Edit 1.png" alt=""></div>
+            </div>
+            <div class="slide-button">
+                <div class="prev-btn"><img src="img/Group 29.png" alt=""></div>
+                <div class="next-btn"><img src="img/Group 30.png" alt=""></div>
+            </div>
+        </div>
+     
     </div>
+
+    <!-- jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- slick js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script>
+        $(document).ready(function(){
+            $('.my-slide').slick({
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                arrows: true,
+                autoplay:true,
+                centerMode: true,
+                centerPadding: '60px',
+                prevArrow: $('.prev-btn'),
+                nextArrow: $('.next-btn'),
+            });
+        });
+    </script>
+
 </body>
 </html>
