Slider center image position done

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 arrows: true,
                 autoplay:true,
                 centerMode: true,
+                variableWidth: true,
                 centerPadding: '60px',
                 prevArrow: $('.prev-btn'),
                 nextArrow: $('.next-btn'),
